@@ -5,7 +5,8 @@ Changelog
 1.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix user fullname lookup when user does not exist.
+  [jone]
 
 
 1.0.4 (2015-01-08)
